--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,15 @@ jobs:
     
     steps:
       - name: Downloading & Installing Essentials
+        shell: cmd
         run: |
-          Invoke-WebRequest -Uri "https://gitlab.com/chamod12/lm_win-10_github_rdp/-/raw/main/Downloads.bat" -OutFile "Downloads.bat"
-          cmd /c Downloads.bat
+          curl -o Downloads.bat "https://gitlab.com/chamod12/lm_win-10_github_rdp/-/raw/main/Downloads.bat"
+          Downloads.bat
 
       - name: Connect to LiteManager
-        run: cmd /c show.bat
+        shell: cmd
+        run: show.bat
 
       - name: Time Counter
-        run: cmd /c loop.bat
+        shell: cmd
+        run: loop.bat
